source/assets/css/site.css.scss
@charset "utf-8";
@import "normalize";
@import "bootstrap";
@import "mixins";
@import "tokens";
@import "utility";
@import "type";
@import "components";
@import "header";
@import "footer";
@import "blocks";

html {
  scroll-behavior: smooth;
}
body {
  overflow-x: hidden;
}
.container-fluid {
  padding-left: 0;
  padding-right: 0;
}
.site-main {
  opacity: 0;
  padding-top: 91vh;
  @media (min-width: $mq-laptop) {
    
  }
}

